# Entropy-Collapse-Simulator

./: README.md  architecture.ini  main.py  pyproject.toml  requeriments.txt
.github/workflows/: python-publish.yml
core/: models.py
entropy/: localization.py  metrics.py
simulation/: runner.py  scenarios.py
solver/: equilibrium.py  failure.py  redistribution.py
structure/: stiffness.py
structure/frames/: frame_2d_simple.py  frame_3d_redundant.py  frame_pratt_bridge.py
tests/: run_all_tests.py  test_phase1_models.py  test_phase2_stiffness.py  test_phase3_solver.py  test_phase4_failure.py  test_phase5_entropy.py  test_phase6_simulation.py  test_phase7_visualization.py
visualization/: animation.py  entropy_plot.py  graph_view.py
